--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Shanti&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shanti&family=Space+Grotesk:wght@300..700&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -30,6 +30,13 @@ body {
 
 .hero-font {
   font-family: "Shanti", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.solutions, .listing{
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
